cmake_minimum_required(VERSION 3.24)
project(Algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(KruskalAlgorithm kruskal_main.cpp)
add_executable(DijkstraAlgorithm dijkstra_main.cpp)
add_executable(StackAlgorithm stack_main.cpp)
add_executable(AdjacencyListAlgorithm adjacency_list_main.cpp)
add_executable(BinarySearchAlgorithm binary_search_main.cpp)
add_executable(GraphConnectivityAlgorithm graph_connectivity_using_dfs.cpp)
add_executable(BinaryTree binary_tree.cpp)
add_executable(KnuthMorrisPrattAlgorithm knuth_morris_pratt.cpp)
add_executable(DagPathAlgorithm dag_path.cpp)
add_executable(FindCycleDfsAlgorithm find_cycle_dfs.cpp)
add_executable(RleAlgorithm rle.cpp)
add_executable(FordFulkersonAlgorithm ford_fulkerson.cpp)
add_executable(GamiltonovWayAlgorithm gamiltonov_way.cpp)
add_executable(FindMstAlgorithm find_mst.cpp)
add_executable(DijkstraShortestPathAlgorithm dijkstra_shortest_path.cpp)
add_executable(CustomStackAlgorithm stack.cpp)
add_executable(HashTableAlgorithm hash_table.cpp)
add_executable(HammingAlgorithm hamming.cpp)
add_executable(GreyCodeAlgorithm grey_code.cpp)
add_executable(UnionSetsKruskalAlgorithm union_sets_kruskal.cpp)
add_executable(ShortWayBfsAlgorithm short_way_bfs.cpp)